--- a/client/src/components/Main/main.css
+++ b/client/src/components/Main/main.css
@@ -44,12 +44,12 @@
     left: 28%;
 }
 
-.register {
+.home {
     position: absolute;
     font-size: 30px;
     font-family: 'Pacifico', cursive;
     top: 47.5%;
-    left: 26.5%;
+    left: 27.5%;
 }
 
 .guild {
