--- a/client/src/components/FindGuild/findGuild.css
+++ b/client/src/components/FindGuild/findGuild.css
@@ -1,8 +1,8 @@
-.superMain {
+.bigContainer {
     position: relative;
     min-height: 100vh;
-}
+  }
 
-.wrapper {
-    padding-bottom: 65px;
-}
+  .wrapper {
+    padding-bottom: 60px;
+  }
