--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -1,3 +1,12 @@
+.bigContainer {
+    position: relative;
+    min-height: 100vh;
+  }
+
+  .wrapper {
+    padding-bottom: 60px;
+  }
+
 .background {
     background-image: url("./table.jpg");
     height: 100%;
