--- a/client/src/components/Header/header.css
+++ b/client/src/components/Header/header.css
@@ -1,6 +1,7 @@
 .navbar {
     position: sticky;
     width: 100%;
+    height: 60px;
     background: #FDF1DC;
     box-shadow: 0 0 1em #867453;
 }
