--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -9,7 +9,7 @@
 
 .background {
     background-image: url("./table.jpg");
-    height: 100%;
+    height: 100vh;
     width: 100%;
 }
 
@@ -23,7 +23,7 @@
 
 .form {
     position: absolute;
-    top: 36%;
+    top: 29%;
     left: 40%;
 }
 
