--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -1,47 +1,70 @@
 .bigContainer {
-    position: relative;
-    min-height: 100vh;
-  }
+  position: relative;
+  min-height: 100vh;
+}
 
-  .wrapper {
-    padding-bottom: 60px;
-  }
+.wrapper {
+  padding-bottom: 60px;
+}
 
-  .wumbotron {
-      position: absolute;
-      width: 100%;
-      height: auto;
-  }
+.wumbotron {
+  background-image: url("./wumbotron.jpg");
+  height: 100vh;
+  width: auto; 
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+  
+.wumboHeader {
+  height: 100%;
+  width: 100%;
+}
+  
+.wumboTitle {
+  position: absolute;
+  font-family: 'Francois One', sans-serif;
+  color: #ffffff;
+  font-size: 80px;
+  top: 300px;
+  left: 15%;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+  border-bottom: crimson 5px solid;
+}
+  
+.wumboText {
+  position: absolute;
+  font-family: 'Francois One', sans-serif;
+  color: #ffffff;
+  font-size: 40px;
+  top: 450px;
+  left: 30%;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+}
 
-  .wumboTitle {
-    position: absolute;
-    font-family: 'Francois One', sans-serif;
-    color: #ffffff;
-    font-size: 80px;
-    top: 40%;
-    left: 15%;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
-    border-bottom: crimson 5px solid;
-  }
+.wumboButton {
+  position: absolute;
+  font-family: 'Francois One', sans-serif;
+  font-size: 40px;
+  top: 550px;
+  left: 45%;
+  background: #507568;
+  margin-top: 10px;
+  color: #ffffff;
+}
 
-  .wumboText {
-    position: absolute;
-    font-family: 'Francois One', sans-serif;
-    color: #ffffff;
-    font-size: 40px;
-    top: 55%;
-    left: 30%;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
-  }
+.about {
+  border: 3px solid #000000;
+  border-radius: 5px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: auto;
+}
 
-  .wumboButton {
-    position: absolute;
-    font-family: 'Francois One', sans-serif;
-    top: 62%;
-    left: 45%;
-    background: #507568;
-    margin-top: 10px;
-    color: #ffffff;
-  }
+.aboutText {
+  margin: 10px;
+  text-align: center;
+}
